[tool.poetry]
name = "Lyova Parsyan"
version = "0.1.0"
description = ""
authors = ["Lyova PArsyan <parsyan.lyova@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.wemake-python-styleguide]
max-line-length = 80
strict = true

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
aiofiles = "^0.8.0"

[tool.poetry.group]
[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.18.0"
flake8-pytest-style = "^1.7.2"
flake8-annotations = "^3.0.1"
flake8-logging-format = "^0.9.0"
flake8-spellcheck = "^0.28.0"
isort = "^5.7.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.19.0"
pytest-cov = "^4.1.0"
aioresponses = "^0.7.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"
Faker = "^20.1.0"
pytest-snapshot = "^0.9.0"

[tool.poetry.group.test.dependencies.pytest-xdist]
extras = ["psutil"]
version = "^3.5.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test*.py"
addopts = "-rsxX -l --tb=short --strict-markers --doctest-modules"
xfail_strict = "true"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
